Continuing the merge with the OFBiz update.